# contextmanaged-assign

./: .gitignore  LICENSE  README.md  pyproject.toml  qt.py
contextmanaged_assign/: __init__.py
tests/: test_assign.py
