[tool.poetry]
name = "contextmanaged-assign"
version = "0.1.0"
description = ""
authors = ["Jacob Valdez <jacobfv123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
glom = "^23.3.0"
simple-dotdict = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
